[package]
name = "routescope"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
maxminddb = "0.24"
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["json"] }
libc = "0.2"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
dns-lookup = "2.0"
once_cell = "1.18"
